0.5.6 (2006-07-18):
  - userbase.LoginSystem now raises a new exception type when login is attempted
    using a username with no domain part.

0.5.5 (2006-07-08):
  - SubStoreStartupService was removed; user stores' services are no longer
    incorrectly started when the Mantissa administrative powerup is installed.
  - IPowerupIndirector was added, allowing for installation of SubStore items
    as powerups on other items.

0.5.4 (2006-07-05):
  - Items with attributes.path attributes can now be upgraded.
  - axiom.scheduler has been improved to make clock-related tests easier to write.
  - Improved test coverage and various bugfixes.

0.5.3 (2006-06-27):
  - A bug causing the table name cache to grow too large was fixed.

0.5.2 (2006-06-26):
  - Type names are now determined on a per-store basis, rather than cached
    globally on the Item.

0.5.1 (2006-06-16):
  - axiom.slotmachine._structlike removed in favor of the implementation in
    Epsilon, epsilon.structlike.record.
  - The batch process has been adjusted to do more work per iteration. 

0.5.0 (2006-06-12):
  Highlights:
  - Fixed several bugs, including several potential data-corruption issues.
    All users are recommended to upgrade, but back up your data and test your
    upgrade first!
  - There is now a 'money' attribute type which uses fixed-precision math in
    the database specifically designed for dealing with the types of issues
    associated with database-persistent financial data.
  - Some simple relational constraints (the equivalent of ON DELETE CASCADE)
    have been implemented using the 'whenDeleted' keyword argument.
  - Indexes which are created in your code will now automatically be added to
    opened databases without requiring an upgrader or a change to your Item's
    schemaVersion.
  - You can now use 'declareLegacyItem' to declare legacy schemas to record the
    schema of older versions of your software -- this enables upgrading of more